[gd_scene load_steps=44 format=3 uid="uid://bac4pj0ebig66"]

[ext_resource type="Script" uid="uid://csw28335vv0ag" path="res://game/entities/player/player.gd" id="1_symyc"]
[ext_resource type="Script" uid="uid://n1nqv1y2oarq" path="res://game/entities/state_machine/state_machine.gd" id="3_machine"]
[ext_resource type="Script" uid="uid://cr5t7hqiw7gla" path="res://game/data/player_input_config.gd" id="3_qiwj3"]
[ext_resource type="Script" uid="uid://yaw5wxdru7or" path="res://game/data/player_balance_config.gd" id="4_bls4j"]
[ext_resource type="Resource" uid="uid://yg6bsdqqsi44" path="res://game/entities/player/player_inventory.tres" id="4_gx6sm"]
[ext_resource type="Script" uid="uid://bpogk275a0h0o" path="res://game/entities/player/states/idle.gd" id="4_idle"]
[ext_resource type="Script" uid="uid://dro8mkufucpiy" path="res://game/entities/player/states/walk.gd" id="5_walk"]
[ext_resource type="Script" uid="uid://cay7qqbekj2l" path="res://game/entities/player/states/use.gd" id="6_use"]
[ext_resource type="Script" uid="uid://bca562uakmsd1" path="res://game/entities/player/states/tool_charging.gd" id="8_charging"]
[ext_resource type="Texture2D" uid="uid://yv8s7l6mlpxv" path="res://assets/characters/player/farm_character_use_hands.png" id="9_0f2w8"]
[ext_resource type="Texture2D" uid="uid://d0gw1sqnuwpgq" path="res://assets/characters/player/farm_character_swing_hands.png" id="9_6strl"]
[ext_resource type="Script" uid="uid://bownblu0c007a" path="res://game/entities/player/states/tool_swing.gd" id="9_swing"]
[ext_resource type="Script" uid="uid://bt4d1lyn876kc" path="res://game/entities/player/states/placement.gd" id="10_placement"]
[ext_resource type="Script" uid="uid://dm5x88o2wxbyr" path="res://game/entities/character/character_appearance.gd" id="10_so4hh"]
[ext_resource type="Script" uid="uid://byioojbuhvs23" path="res://game/entities/components/raycell_component.gd" id="15_b2kln"]
[ext_resource type="Script" uid="uid://bf1i6djxjpjcs" path="res://game/entities/player/scripts/tool_manager.gd" id="18_b2kln"]
[ext_resource type="Script" uid="uid://cqflw2cgoeo6n" path="res://game/entities/components/shake_component.gd" id="18_shake"]
[ext_resource type="PackedScene" uid="uid://dyakxflhhwki" path="res://game/entities/tools/tool.tscn" id="19_tool"]
[ext_resource type="Script" uid="uid://clfsfhgg00m0y" path="res://game/entities/components/grid_dynamic_occupant_component.gd" id="20_grid_dyn"]
[ext_resource type="Script" uid="uid://8icop2umtjnn" path="res://game/entities/components/footsteps_component.gd" id="21_eyb6c"]
[ext_resource type="Script" uid="uid://b45j6nsthgcca" path="res://game/entities/components/agent_component.gd" id="22_agent"]
[ext_resource type="Script" uid="uid://kctvcn8ktqsk" path="res://game/entities/components/cutscene_actor_component.gd" id="23_cutscene_actor"]
[ext_resource type="Script" uid="uid://cpiqit4a5flbm" path="res://game/entities/player/scripts/placement_manager.gd" id="24_place_mgr"]
[ext_resource type="Script" uid="uid://2fcx0hixnhw1" path="res://game/entities/components/energy_component.gd" id="25_energy"]
[ext_resource type="PackedScene" path="res://game/entities/character/character_visual.tscn" id="26_char_vis"]
[ext_resource type="PackedScene" uid="uid://dtsg5mw4o2g7n" path="res://game/entities/tools/tool_visuals.tscn" id="27_tool_visuals"]

[sub_resource type="Resource" id="Resource_8fjmc"]
script = ExtResource("4_bls4j")
health_regen_per_second = 0.5
metadata/_custom_type_script = "uid://yaw5wxdru7or"

[sub_resource type="Resource" id="Resource_26q78"]
script = ExtResource("3_qiwj3")
metadata/_custom_type_script = "uid://cr5t7hqiw7gla"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eyb6c"]
size = Vector2(6, 10)

[sub_resource type="Resource" id="Resource_0f2w8"]
script = ExtResource("10_so4hh")
metadata/_custom_type_script = "uid://dm5x88o2wxbyr"

[sub_resource type="AtlasTexture" id="AtlasTexture_i5qpf"]
atlas = ExtResource("9_6strl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jquf"]
atlas = ExtResource("9_6strl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhcb0"]
atlas = ExtResource("9_6strl")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0v17"]
atlas = ExtResource("9_6strl")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_owau0"]
atlas = ExtResource("9_6strl")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8ed1"]
atlas = ExtResource("9_6strl")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6strl"]
atlas = ExtResource("9_0f2w8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tv6ny"]
atlas = ExtResource("9_0f2w8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vc1s"]
atlas = ExtResource("9_0f2w8")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6116"]
atlas = ExtResource("9_0f2w8")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_so4hh"]
atlas = ExtResource("9_0f2w8")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aidgt"]
atlas = ExtResource("9_0f2w8")
region = Rect2(64, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hnip2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5qpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jquf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhcb0")
}],
"loop": false,
"name": &"swing_left",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0v17")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owau0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8ed1")
}],
"loop": false,
"name": &"swing_right",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6strl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv6ny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vc1s")
}],
"loop": false,
"name": &"use_left",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6116")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_so4hh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aidgt")
}],
"loop": false,
"name": &"use_right",
"speed": 6.0
}]

[node name="Player" type="CharacterBody2D"]
collision_mask = 30
script = ExtResource("1_symyc")
player_balance_config = SubResource("Resource_8fjmc")
player_input_config = SubResource("Resource_26q78")
inventory = ExtResource("4_gx6sm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_eyb6c")

[node name="CharacterVisual" parent="." instance=ExtResource("26_char_vis")]
position = Vector2(0, -8)
appearance = SubResource("Resource_0f2w8")

[node name="ToolVisuals" parent="." instance=ExtResource("27_tool_visuals")]

[node name="HandsOverlay" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 2
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_hnip2")
animation = &"use_right"
frame = 2
frame_progress = 1.0

[node name="Carry" type="Node2D" parent="."]
z_index = 60
position = Vector2(0, -22)

[node name="CarryPoint" type="Marker2D" parent="Carry"]

[node name="CarriedItem" type="Sprite2D" parent="Carry"]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -9)
zoom = Vector2(2, 2)

[node name="AudioListener2D" type="AudioListener2D" parent="Camera2D"]
current = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -9)
volume_db = -20.0

[node name="StateMachine" type="Node2D" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("3_machine")
starting_state = NodePath("Idle")

[node name="Idle" type="Node2D" parent="StateMachine"]
script = ExtResource("4_idle")

[node name="Walk" type="Node2D" parent="StateMachine"]
script = ExtResource("5_walk")

[node name="Use" type="Node2D" parent="StateMachine"]
script = ExtResource("6_use")

[node name="ToolCharging" type="Node2D" parent="StateMachine"]
script = ExtResource("8_charging")

[node name="ToolSwing" type="Node2D" parent="StateMachine"]
script = ExtResource("9_swing")

[node name="Placement" type="Node2D" parent="StateMachine"]
script = ExtResource("10_placement")

[node name="Components" type="Node2D" parent="."]

[node name="CutsceneActorComponent" type="Node" parent="Components"]
script = ExtResource("23_cutscene_actor")

[node name="EnergyComponent" type="Node" parent="Components"]
script = ExtResource("25_energy")

[node name="RayCellComponent" type="Node" parent="Components" node_paths=PackedStringArray("marker")]
script = ExtResource("15_b2kln")
use_cast_radius = 15.0
marker = NodePath("../../Markers/Chest")

[node name="SpriteShakeComponent" type="Node" parent="Components" node_paths=PackedStringArray("target_nodes")]
script = ExtResource("18_shake")
target_nodes = [NodePath("../../CharacterVisual")]

[node name="CameraShakeComponent" type="Node" parent="Components" node_paths=PackedStringArray("target_nodes")]
script = ExtResource("18_shake")
target_nodes = [NodePath("../../Camera2D")]
shake_strength = 1.0
shake_duration = 0.1

[node name="Tool" parent="Components" instance=ExtResource("19_tool")]
position = Vector2(0, -8)

[node name="ToolManager" type="Node" parent="Components"]
script = ExtResource("18_b2kln")

[node name="PlacementManager" type="Node2D" parent="Components"]
script = ExtResource("24_place_mgr")

[node name="GhostSprite" type="Sprite2D" parent="Components/PlacementManager"]
z_index = 50

[node name="AgentComponent" type="Node" parent="Components" node_paths=PackedStringArray("tool_manager")]
script = ExtResource("22_agent")
kind = 1
agent_id = &"player"
tool_manager = NodePath("../ToolManager")

[node name="GridOccupantComponent" type="Node" parent="Components" node_paths=PackedStringArray("position_source", "collision_shape")]
script = ExtResource("20_grid_dyn")
position_source = NodePath("../../Markers/Feet")
entity_type = 5
auto_register_on_ready = false
collision_shape = NodePath("../../CollisionShape2D")

[node name="FootstepsComponent" type="Node" parent="Components" node_paths=PackedStringArray("audio_player")]
script = ExtResource("21_eyb6c")
audio_player = NodePath("../../AudioStreamPlayer2D")

[node name="Markers" type="Node2D" parent="."]

[node name="Feet" type="Marker2D" parent="Markers"]

[node name="Chest" type="Marker2D" parent="Markers"]
position = Vector2(0, -5)
